2015-02-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.6 released.

2015-02-03  Carl Hetherington  <cth@carlh.net>

	* Fix crash on cropping a 1920x1080 content top
	and bottom and then fitting it into a Scope
	container.

2015-01-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.5 released.

2015-01-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.4 released.

2015-01-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.3 released.

2015-01-25  Carl Hetherington  <cth@carlh.net>

	* Back-port the in-tree libquickmail from 2.x with
	its fix to prevent the use of VRFY (#477).

2015-01-24  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.2 released.

2015-01-24  Carl Hetherington  <cth@carlh.net>

	* New ru_RU translation from Igor Voytovich.

2015-01-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.1 released.

2015-01-23  Carl Hetherington  <cth@carlh.net>

	* Only take the MD5 of the first and last megabyte
	of content files, rather than the whole thing, to speed
	up content examination (#472).

	* Remove option to disable digest for image files.

2015-01-20  Carl Hetherington  <cth@carlh.net>

	* Fix update checker.

	* Scan a whole FFmpeg file if no duration is given
	in its header.

2015-01-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.0 released.

2015-01-16  c.hetherington  <cth@carlh.net>

	* Update fr_FR translation from Thierry Journet.

2015-01-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.42 released.

2015-01-12  c.hetherington  <cth@carlh.net>

	* Trim whitespace from FTP replies
	to fix problems with certificate download (#442).

2015-01-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.41 released.

2015-01-11  Carl Hetherington  <cth@carlh.net>

	* Fix for subtitle timing with trim.

2015-01-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.40 released.

2015-01-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.39 released.

2015-01-09  Carl Hetherington  <cth@carlh.net>
