@@ -178,3 +178,19 @@ BOOST_AUTO_TEST_CASE (video_content_scale_test_to_ratio)
 		libdcp::Size (185, 100)
 		);
 }
+
+/* Test no scale */
+BOOST_AUTO_TEST_CASE (video_content_scale_no_scale)
+{
+	/* No scale where the content is bigger than even the film container */
+	test (
+		libdcp::Size (1920, 1080),
+		libdcp::Size (887, 371),
+		libdcp::Size (2048, 858),
+		Crop (),
+		0,
+		false,
+		libdcp::Size (659, 371)
+		);
+}
+
