@@ -1,3 +1,9 @@
+2015-02-04  Carl Hetherington  <cth@carlh.net>
+
+	* Fix some bad string encodings and another
+	no-scale crash (when content is larger than the
+	container) (possibly #482).
+
 2015-02-03  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.77.6 released.
